# COSIG

./: CMakeLists.txt  evaluation.txt  main.cpp  scene.txt
src/: CMakeLists.txt  builder.hpp  camera.hpp  color.hpp  common.cpp  common.hpp  figure.cpp  figure.hpp  image.cpp  image.hpp  light.hpp  main.cpp  material.cpp  material.hpp  parser.cpp  parser.hpp  ray.cpp  ray.hpp  raytracer.cpp  raytracer.hpp  transformation.cpp  transformation.hpp  types.hpp
